benchmark-results/7/merge/cseq/concurrentwitness2test.2024-11-08_13-30-27.logfiles/SV-COMP23_unreach-call.cseq-mix035_power.opt_rmo.opt.yml.log
ConcurrentWitness2Test/start.sh svcomp23-witness-benchmarks/tools/cseq/pthread-wmm/mix035_power.opt_rmo.opt.yml/mix035_power.opt_rmo.opt.i --graphml-witness svcomp23-witness-benchmarks/tools/cseq/pthread-wmm/mix035_power.opt_rmo.opt.yml/witness.graphml


--------------------------------------------------------------------------------


Traceback (most recent call last):
  File "/home/runner/work/ConcurrentWitness2Test/ConcurrentWitness2Test/ConcurrentWitness2Test/main.py", line 85, in translate_to_c
    sys.exit(-1)
SystemExit: -1
/tmp/BenchExec_run_z61fn3xj/tmp/tmp0gwsjadt.c
Compilation started
/tmp/BenchExec_run_z61fn3xj/tmp/tmp0gwsjadt.c: In function ‘P0’:
/tmp/BenchExec_run_z61fn3xj/tmp/tmp0gwsjadt.c:573:19: error: ‘FALSE’ undeclared (first use in this function)
  573 |   weak$$choice0 = FALSE;;
      |                   ^~~~~
/tmp/BenchExec_run_z61fn3xj/tmp/tmp0gwsjadt.c:573:19: note: each undeclared identifier is reported only once for each function it appears in

Compilation ended (exit code 1)
Verdict: Compilation error
Verdict: Unknown error
